fixed active class styling on mobile nav bar

--- a/resources/assets/sass/spark/elements/navbar.scss
+++ b/resources/assets/sass/spark/elements/navbar.scss
@@ -17,9 +17,6 @@
     color: #FFFFFF;
 }
 
-.active {
-    background: #ff4b2e;
-}
 
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
